spacing fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -353,11 +353,11 @@ p, li{
   border-radius: 16px;
 }
 
-.section {
+/* .section {
   max-width: 800px;
   margin: 0 auto;
   padding: 0 1rem;
-}
+} */
 
 .section-container {
   max-width: 800px;
